--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
 		"typecheck": "tsc --noEmit",
 		"check": "biome check",
 		"check:write": "biome check --write",
-		"prisma:generate": "prisma generate",
-		"db:push": "prisma db push",
-		"generate:openapi": "tsx src/scripts/generate-openapi.ts"
+		"generate:openapi": "tsx src/scripts/generate-openapi.ts",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:ui": "vitest --ui",
+		"test:coverage": "vitest run --coverage"
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.19.6",
 		"@hono/swagger-ui": "^0.5.2",
 		"@hono/zod-openapi": "^1.1.4",
-		"@prisma/client": "^6.19.0",
 		"dotenv": "^17.2.3",
 		"hono": "^4.10.5",
 		"zod": "^4.1.12"
@@ -25,9 +26,10 @@
 		"@biomejs/biome": "2.3.5",
 		"@types/js-yaml": "^4.0.9",
 		"@types/node": "^20.11.17",
+		"@vitest/ui": "^4.0.8",
 		"js-yaml": "^4.1.0",
-		"prisma": "^6.19.0",
 		"tsx": "^4.7.1",
-		"typescript": "^5.8.3"
+		"typescript": "^5.8.3",
+		"vitest": "^4.0.8"
 	}
 }
